syntax = "proto3";

import "moviesession/model/model.proto";

option java_multiple_files = true;
option java_package = "com.brekhin.moviesession.grpc.model";

message gRPCAddTimeOfSessionRequest {
    GTimeOfSession timeOfSession = 1;
}

message gRPCGetAllDateOfSessionRequest {
}

message gRPCGetInfoTimeOfSessionByIdRequest {
    int64 timeOfSessionId = 1;
}

message gRPCGetSessionsByMovieIdRequest {
    int64 movieId = 1;
}

message gRPCDeleteSessionByIdRequest {
    int64 sessionId = 1;
}

message gRPCDeleteAllSessionsByMovieIdRequest {
    int64 movieId = 1;
}

