syntax = "proto3";

import "moviesession/model/request.proto";
import "moviesession/model/response.proto";
import "common/base.proto";

option java_multiple_files = true;
option java_package = "com.brekhin.moviesession.grpc.service";

service MovieSessionService {

    rpc addTimeOfSession(gRPCAddTimeOfSessionRequest) returns (gRPCAddTimeOfSessionResponse);

    rpc getInfoAboutTimeOfSessionById(gRPCGetInfoTimeOfSessionByIdRequest) returns (gRPCGetInfoTimeOfSessionByIdResponse);

    rpc getSessionsByMovieId(gRPCGetSessionsByMovieIdRequest) returns (gRPCGetSessionsByMovieIdResponse);

    rpc deleteSessionById(gRPCDeleteSessionByIdRequest) returns (Empty);

    rpc deleteAllSessionsByMovieId(gRPCDeleteAllSessionsByMovieIdRequest) returns (Empty);

    rpc getAllCinemaHall(gRPCGetAllCinemaHallRequest) returns (gRPCGetAllCinemaHallResponse);

    rpc addCinemaHall(gRPCAddCinemaHallRequest) returns (gRPCAddCinemaHallResponse);

    rpc deleteCinemaHallById(gRPCDeleteCinemaHallByIdRequest) returns (gRPCDeleteCinemaHallByIdResponse);

    rpc getCinemaHallById(gRPCGetCinemaHallByIdRequest) returns(gRPCGetCinemaHallByIdResponse);

    rpc assignHallAndSession(gRPCAssignHallAndSessionRequest) returns (Empty);

}